@@ -3,7 +3,7 @@ AUX webapp-config-1.50.16-apache-move.patch 507 RMD160 f86f9a966c0848c36a4404a93
 AUX webapp-config-1.50.16-baselayout2.patch 511 RMD160 cfe440f27a29d0db4b536db5b3fe5655ccf1120b SHA1 1d69d0d88a750b05389b71771b371650eaa89913 SHA256 b94bbd0075f22b735189bd6af334ee68f563470632f96f53fa055a0655fb0360
 AUX webapp-config-1.50.16-htdocs-symlink.patch 509 RMD160 ad53b2107e5f51626f3996925c9562d77fc1fdb5 SHA1 0adaefe78f272f32a939f56f941634c7f3c8ed6a SHA256 24e48a42f2b08010ad25f5f83bf4f3f47686fbcd786c0547e95c054cf7021b75
 DIST webapp-config-1.50.16.tar.gz 103576 RMD160 d3ab1b27d9b279241d2c9ff3b764ac0b9699b0a0 SHA1 dae0b27bf731116516aed16fd10dc75c0146d332 SHA256 cd5cf95d0abc9b469b08e6fffa885df10d3651d558164d35efe8e45df1fc8a5f
-EBUILD webapp-config-1.50.16-r1.ebuild 1889 RMD160 def2a3ba9f68a945f1868b510884372180e7a274 SHA1 f8a31f63517b5582b45aa8b3b82242835ab9414a SHA256 d60e43e0151eae1c0ffcbdf9e03ede396a5ff421d6a0f29a42bea3888f4d85f9
-EBUILD webapp-config-1.50.16-r3.ebuild 2001 RMD160 faad700c37259fd69d678b734018798a4c7bc1c8 SHA1 b727c69d1c1a3f0285eb17302411f81992016ffb SHA256 e539eead9e89dcddb57ca744044e885eb52f08dce1b9c4df397c73b39651d6e7
-MISC ChangeLog 23043 RMD160 9fbca387c13b6fcac9ad6196d550f7e23aa9e8cb SHA1 ea84aee5cf2dcad87470a8a36d7c3d4b057c888b SHA256 7f6eef291ba92cc044b118ba7094a79818d42d33c9af9615380f79e168a71613
+EBUILD webapp-config-1.50.16-r1.ebuild 1730 RMD160 42ec41759c426fc25751a0e39736738caea13159 SHA1 b8fe6ba81949e7f37952fc3ab5e6161515b6d18f SHA256 a05c74ba79fe1bf99925d55c204c17652d8d5c2c028c710d1ec1cd965f7787dd
+EBUILD webapp-config-1.50.16-r3.ebuild 1918 RMD160 4edee5bace5a146585ef8551f699cf0de98bb99e SHA1 5dbbb75e9cc26c79d952c1096d428a55badb2197 SHA256 58809c3b665136feb71d7b4a7c93135b37638e646e08a4797caf0d5a4e3032cc
+MISC ChangeLog 23229 RMD160 4717812217fac0b80552f53404751c3c796205bf SHA1 5923c76a9e64a931765643468e5686e0c7b11ac4 SHA256 1e5be6fc5685c0db9d463f5ce88937964c58f8a82ecdcee247aa514c7cd26095
 MISC metadata.xml 225 RMD160 7081530104e84534030353cb15c4a541bb8d5e05 SHA1 af63626385169ab58c44695ebe4df705d455f94b SHA256 0986f8971072c8d055fccbc67cc59ac43eecd1f5592cd9c0ae729b23e550cc96
