@@ -1,8 +1,12 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/webapp-config/webapp-config-1.50.16-r1.ebuild,v 1.13 2010/03/10 03:16:31 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/webapp-config/webapp-config-1.50.16-r1.ebuild,v 1.14 2010/05/14 18:56:00 arfrever Exp $
 
-inherit eutils distutils
+EAPI="3"
+PYTHON_DEPEND="2"
+SUPPORT_PYTHON_ABIS="1"
+
+inherit distutils eutils
 
 DESCRIPTION="Gentoo's installer for web-based applications"
 HOMEPAGE="http://sourceforge.net/projects/webapp-config/"
@@ -14,15 +18,16 @@ KEYWORDS="alpha amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc x86 ~x86-f
 IUSE=""
 
 DEPEND=""
+RDEPEND=""
+RESTRICT_PYTHON_ABIS="3.*"
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-	epatch "${FILESDIR}"/${P}-apache-move.patch
+PYTHON_MODNAME="WebappConfig"
+
+src_prepare() {
+	epatch "${FILESDIR}/${P}-apache-move.patch"
 }
 
 src_install() {
-
 	# According to this discussion:
 	# http://mail.python.org/pipermail/distutils-sig/2004-February/003713.html
 	# distutils does not provide for specifying two different script install
@@ -30,33 +35,30 @@ src_install() {
 	# be ok
 	distutils_src_install --install-scripts="/usr/sbin"
 
-	dodir /etc/vhosts
-	cp config/webapp-config "${D}"/etc/vhosts/
+	python_convert_shebangs 2 "${ED}usr/sbin/webapp-config"
+
+	insinto /etc/vhosts
+	doins config/webapp-config
+
 	keepdir /usr/share/webapps
 	keepdir /var/db/webapps
+
 	dodoc examples/phpmyadmin-2.5.4-r1.ebuild AUTHORS.txt CHANGES.txt examples/postinstall-en.txt
-	doman doc/webapp-config.5 doc/webapp-config.8
-	dohtml doc/webapp-config.5.html doc/webapp-config.8.html
+	doman doc/*.[58]
+	dohtml doc/*.[58].html
 }
 
 src_test() {
-	distutils_python_version
-	if [[ $PYVER_MAJOR -gt 1 ]] && [[ $PYVER_MINOR -gt 3 ]] ; then
-		elog "Running webapp-config doctests..."
-		if ! PYTHONPATH="." ${python} WebappConfig/tests/dtest.py; then
-			eerror "DocTests failed - please submit a bug report"
-			die "DocTesting failed!"
-		fi
-	else
-		elog "Python version below 2.4! Disabling tests."
-	fi
+	testing() {
+		PYTHONPATH="." "$(PYTHON)" WebappConfig/tests/dtest.py
+	}
+	python_execute_function testing
 }
 
 pkg_postinst() {
-	echo
+	distutils_pkg_postinst
+
 	elog "Now that you have upgraded webapp-config, you **must** update your"
 	elog "config files in /etc/vhosts/webapp-config before you emerge any"
 	elog "packages that use webapp-config."
-	echo
-	epause 5
 }
