@@ -1,8 +1,12 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/webapp-config/webapp-config-1.50.16-r3.ebuild,v 1.3 2010/03/10 03:16:31 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/webapp-config/webapp-config-1.50.16-r3.ebuild,v 1.4 2010/05/14 18:56:00 arfrever Exp $
 
-inherit eutils distutils
+EAPI="3"
+PYTHON_DEPEND="2"
+SUPPORT_PYTHON_ABIS="1"
+
+inherit distutils eutils
 
 DESCRIPTION="Gentoo's installer for web-based applications"
 HOMEPAGE="http://sourceforge.net/projects/webapp-config/"
@@ -14,14 +18,16 @@ KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~spar
 IUSE=""
 
 DEPEND=""
+RDEPEND=""
+RESTRICT_PYTHON_ABIS="3.*"
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-	epatch "${FILESDIR}"/${P}-apache-move.patch
-	epatch "${FILESDIR}"/${P}-baselayout2.patch
-	epatch "${FILESDIR}"/${P}-htdocs-symlink.patch
-	epatch "${FILESDIR}"/${P}-absolute-paths.patch
+PYTHON_MODNAME="WebappConfig"
+
+src_prepare() {
+	epatch "${FILESDIR}/${P}-apache-move.patch"
+	epatch "${FILESDIR}/${P}-baselayout2.patch"
+	epatch "${FILESDIR}/${P}-htdocs-symlink.patch"
+	epatch "${FILESDIR}/${P}-absolute-paths.patch"
 	rm -f doc/webapp.eclass.5{,.html}
 }
 
@@ -32,6 +38,8 @@ src_install() {
 	# locations. Since we only install one script here the following should
 	# be ok
 	distutils_src_install --install-scripts="/usr/sbin"
+
+	python_convert_shebangs 2 "${ED}usr/sbin/webapp-config"
 
 	insinto /etc/vhosts
 	doins config/webapp-config
@@ -45,23 +53,16 @@ src_install() {
 }
 
 src_test() {
-	distutils_python_version
-	if [[ $PYVER_MAJOR -gt 1 ]] && [[ $PYVER_MINOR -gt 3 ]] ; then
-		elog "Running webapp-config doctests..."
-		if ! PYTHONPATH="." ${python} WebappConfig/tests/dtest.py; then
-			eerror "DocTests failed - please submit a bug report"
-			die "DocTesting failed!"
-		fi
-	else
-		elog "Python version below 2.4! Disabling tests."
-	fi
+	testing() {
+		PYTHONPATH="." "$(PYTHON)" WebappConfig/tests/dtest.py
+	}
+	python_execute_function testing
 }
 
 pkg_postinst() {
-	echo
+	distutils_pkg_postinst
+
 	elog "Now that you have upgraded webapp-config, you **must** update your"
 	elog "config files in /etc/vhosts/webapp-config before you emerge any"
 	elog "packages that use webapp-config."
-	echo
-	epause 5
 }
