@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/webapp-config
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/webapp-config/ChangeLog,v 1.64 2010/03/10 03:16:31 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/webapp-config/ChangeLog,v 1.65 2010/05/14 18:56:00 arfrever Exp $
+
+  14 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  webapp-config-1.50.16-r1.ebuild, webapp-config-1.50.16-r3.ebuild:
+  Set SUPPORT_PYTHON_ABIS (bug #308287).
 
   10 Mar 2010; Sebastian Pipping <sping@gentoo.org>
   webapp-config-1.50.16-r1.ebuild, webapp-config-1.50.16-r3.ebuild:
